[gd_scene load_steps=27 format=3 uid="uid://cnm2f4u47p3po"]

[ext_resource type="Script" path="res://scenes/battle/gun_2.gd" id="1_tcwlv"]
[ext_resource type="PackedScene" uid="uid://bmc6nx7ggqism" path="res://scenes/battle/basic_projectile.tscn" id="2_a7awr"]
[ext_resource type="Texture2D" uid="uid://cncx2bfme3y64" path="res://assets/sprites/battle/gun2.png" id="3_721du"]
[ext_resource type="AudioStream" uid="uid://huflma4e5xrr" path="res://assets/sfx/Laser/Lazer Gun-cm_01-02.wav" id="4_dxwxe"]
[ext_resource type="AudioStream" uid="uid://f4q3jj3g6lg8" path="res://assets/sfx/Laser/Lazer Gun-cm_02-01.wav" id="5_6dbme"]
[ext_resource type="AudioStream" uid="uid://ngvw5wpvk0jt" path="res://assets/sfx/Laser/Lazer Gun-cm_03-01.wav" id="6_p7d3g"]
[ext_resource type="AudioStream" uid="uid://wtf4rdcfo3p0" path="res://assets/sfx/Laser/Lazer Gun-cm_04-01.wav" id="7_pfcih"]
[ext_resource type="AudioStream" uid="uid://dcx6dru75snij" path="res://assets/sfx/Laser/Lazer Gun-cm_05-01.wav" id="8_yw44g"]
[ext_resource type="AudioStream" uid="uid://eedobldq1q63" path="res://assets/sfx/BulletDry/BULLET DRY_01-03.wav" id="9_208cq"]
[ext_resource type="AudioStream" uid="uid://ckwm5rdviq47h" path="res://assets/sfx/BulletDry/BULLET DRY_01-05.wav" id="10_mj32k"]
[ext_resource type="AudioStream" uid="uid://bbg0x4p8881wx" path="res://assets/sfx/BulletDry/BULLET DRY_01-07.wav" id="11_owql4"]
[ext_resource type="AudioStream" uid="uid://dkkcmy6o17xln" path="res://assets/sfx/BulletDry/BULLET DRY_01-09.wav" id="12_56hbn"]
[ext_resource type="AudioStream" uid="uid://dr34ntxc1a6ri" path="res://assets/sfx/BulletDry/BULLET DRY_01-10.wav" id="13_wp6ds"]
[ext_resource type="AudioStream" uid="uid://ks81lc53gyvk" path="res://assets/sfx/BulletWet/BULLET WET_02-05.wav" id="14_634lq"]
[ext_resource type="AudioStream" uid="uid://dcad51p0f61qx" path="res://assets/sfx/BulletWet/BULLET WET_02-10.wav" id="15_7wfha"]
[ext_resource type="AudioStream" uid="uid://u6bfgutu5yxp" path="res://assets/sfx/BulletWet/BULLET WET_02-11.wav" id="16_k2rfo"]
[ext_resource type="AudioStream" uid="uid://c7aaxpol2oblp" path="res://assets/sfx/BulletWet/BULLET WET_02-13.wav" id="17_pc4lk"]
[ext_resource type="AudioStream" uid="uid://hxeacad7qg0y" path="res://assets/sfx/BulletWet/BULLET WET_02-15.wav" id="18_yevx1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rbqhw"]
atlas = ExtResource("3_721du")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_336qw"]
atlas = ExtResource("3_721du")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_roa33"]
atlas = ExtResource("3_721du")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_id2e6"]
atlas = ExtResource("3_721du")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hmvoc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbqhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_336qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roa33")
}],
"loop": false,
"name": &"fire",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_id2e6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ib0um"]
random_pitch = 1.35
streams_count = 6
stream_1/stream = ExtResource("4_dxwxe")
stream_2/stream = ExtResource("5_6dbme")
stream_3/stream = ExtResource("6_p7d3g")
stream_4/stream = ExtResource("7_pfcih")
stream_5/stream = ExtResource("8_yw44g")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_t4jd3"]
streams_count = 5
stream_0/stream = ExtResource("9_208cq")
stream_1/stream = ExtResource("10_mj32k")
stream_2/stream = ExtResource("11_owql4")
stream_3/stream = ExtResource("12_56hbn")
stream_4/stream = ExtResource("13_wp6ds")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dq12q"]
streams_count = 5
stream_0/stream = ExtResource("14_634lq")
stream_1/stream = ExtResource("15_7wfha")
stream_2/stream = ExtResource("16_k2rfo")
stream_3/stream = ExtResource("17_pc4lk")
stream_4/stream = ExtResource("18_yevx1")

[node name="Gun2" type="Node2D" node_paths=PackedStringArray("spawn_point", "sfx")]
script = ExtResource("1_tcwlv")
projectile = ExtResource("2_a7awr")
spawn_point = NodePath("SpawnPoint")
sfx = NodePath("BulletDrySFX")
spread = 10.0
bullet_damage_multiplier = 2.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hmvoc")
animation = &"fire"
autoplay = "idle"
frame = 2
frame_progress = 1.0

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(-3, -8)

[node name="SpawnPoint2" type="Marker2D" parent="."]
position = Vector2(3, -8)

[node name="LaserSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ib0um")

[node name="BulletDrySFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_t4jd3")
bus = &"SFX"

[node name="BulletWetSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_dq12q")
bus = &"BulletCompSFX"
playback_type = 2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_basic_gun_animation_finished"]
